-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: 3.1.9
-
Component/s: JavaScript
-
None
-
Fully Compatible
-
Windows
-
Platforms 2017-01-23, Platforms 2017-02-13
-
None
-
None
-
None
-
None
-
None
-
None
-
None
SpiderMonkey does not automatically detect the following defines on Windows 32-bit and 64-bit.
#define HAVE_ACOSH 1 #define HAVE_ASINH 1 #define HAVE_ATANH 1 #define HAVE_CBRT 1 #define HAVE_EXPM1 1 #define HAVE_LOG1P 1 #define HAVE_LOG2 1