SERVER-20811 SpiderMonkey js-confdefs.h missing Windows defines